styles stuff and popover list view selector

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Onsen UI -->
     <link rel="stylesheet" href="static/onsenui/css/onsenui.css"/>
-    <link rel="stylesheet" href="static/onsenui/css/onsen-css-components.css"/>
+    <link rel="stylesheet" href="static/onsenui/css/phidias-onsen-css-components.min.css"/>
     <script src="static/onsenui/js/onsenui.js"></script>
     <script type="text/javascript">
       // Force onsen platform theme (overrides auto-detect)
