--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link href="static/quill/dist/quill.snow.css" rel="stylesheet">
     <link href="static/quill/dist/quill.bubble.css" rel="stylesheet">
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-w7WOjp6Rgg4pZZDFW7Eqp6gR2AAlt4I"></script>
   </head>
 
   <body>
