--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="phi-title" content="Phidias">
-    <meta name="phi-google-client-id" content="890266961007.apps.googleusercontent.com">
+		<meta name="phi-title" content="Phidias">
+		<meta name="phi-google-client-id" content="890266961007.apps.googleusercontent.com">
 <!--
-    <meta name="phi-endpoint" content="https://phidias.api.phidias.co">
-    <meta name="phi-logo" content="https://phidias.phidias.co/interface/xhtml/img/label.png">
+		<meta name="phi-endpoint" content="https://phidias.api.phidias.co">
+		<meta name="phi-logo" content="https://phidias.phidias.co/interface/xhtml/img/label.png">
 -->
+		<title>Phidias</title>
 
-    <title>Phidias</title>
+		<link rel="manifest" href="manifest.json">
 
-    <link rel="manifest" href="manifest.json">
+		<!-- Phidias CSS -->
+		<link rel="stylesheet" href="static/css/normalize.css" />
+		<link rel="stylesheet" href="static/phidias.css/dist/phidias.min.css" />
 
-    <!-- Phidias CSS -->
-    <link rel="stylesheet" href="static/phidias.css/dist/phidias.min.css"/>
+		<!-- Fontawesome -->
+		<link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" />
 
-    <!-- Fontawesome -->
-    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css"/>
+		<!-- Onsen UI -->
+		<link rel="stylesheet" href="static/onsenui/css/onsenui.css" />
+		<link rel="stylesheet" href="static/onsenui/css/phidias-onsen-css-components.min.css" />
+		<script src="static/onsenui/js/onsenui.js"></script>
+		<script type="text/javascript">
+			// Force onsen platform theme (overrides auto-detect)
+			ons.platform.select('android') // or 'ios'
+		</script>
 
-    <!-- Onsen UI -->
-    <link rel="stylesheet" href="static/onsenui/css/onsenui.css"/>
-    <link rel="stylesheet" href="static/onsenui/css/phidias-onsen-css-components.min.css"/>
-    <script src="static/onsenui/js/onsenui.js"></script>
-    <script type="text/javascript">
-      // Force onsen platform theme (overrides auto-detect)
-      ons.platform.select('android') // or 'ios'
-    </script>
+		<!-- Quill text editor -->
+		<link href="static/quill/dist/quill.core.css" rel="stylesheet">
+		<link href="static/quill/dist/quill.snow.css" rel="stylesheet">
+		<link href="static/quill/dist/quill.bubble.css" rel="stylesheet">
+	</head>
 
-    <!-- Quill text editor -->
-    <link href="static/quill/dist/quill.core.css" rel="stylesheet">
-    <link href="static/quill/dist/quill.snow.css" rel="stylesheet">
-    <link href="static/quill/dist/quill.bubble.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-    <div id="app"></div>
-  </body>
+	<body>
+		<div id="app"></div>
+	</body>
 
 </html>
