Update Felipe.vue (google map)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="static/onsenui/css/onsenui.css" />
         <link rel="stylesheet" href="static/onsenui/css/phidias-onsen-css-components.min.css" />
         <script src="static/onsenui/js/onsenui.js"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-w7WOjp6Rgg4pZZDFW7Eqp6gR2AAlt4I"></script>
         <script type="text/javascript">
             // Force onsen platform theme (overrides auto-detect)
             ons.platform.select('android') // or 'ios'
