--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
         <meta name="phi-google-client-id" content="890266961007.apps.googleusercontent.com">
 
-<!--
+
         <meta name="phi-title" content="Phidias">
-        <meta name="phi-endpoint" content="https://phidias.api.phidias.co">
+        <meta name="phi-endpoint" content="http://phidias4.local">
         <meta name="phi-logo" content="https://phidias.phidias.co/interface/xhtml/img/label.png">
         <meta name="phi-organization-name" content="Phidias SAS">
         <meta name="phi-organization-website" content="http://phidias.co">
         <meta name="phi-organization-phone" content="7531147">
         <meta name="phi-organization-location" content="3.45452160,-76.53831490">
- -->
+
 
         <link rel="manifest" href="manifest.json">
 
