--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="manifest" href="manifest.json">
 
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Material+Icons" rel="stylesheet">
 
         <!-- Phidias CSS -->
         <link rel="stylesheet" href="static/css/index.css" />
